--- a/frontend/genre_index.html
+++ b/frontend/genre_index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <a href="main_landing_page.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <!-- 수정: 상대 경로로 변경 -->
             <img src="static/logo.png" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
@@ -69,7 +69,7 @@
         </div>
 
         <div class="navigation-buttons">
-            <a href="main_landing_page.html" class="nav-button">메인 페이지로 돌아가기</a>
+            <a href="index.html" class="nav-button">메인 페이지로 돌아가기</a>
         </div>
     </main>
 
