--- a/frontend/genre_result_page.html
+++ b/frontend/genre_result_page.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header>
-        <a href="main_landing_page.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <!-- 수정: 상대 경로로 변경 -->
             <img src="static/logo.png" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
@@ -56,7 +56,7 @@
             </div>
             <div class="actions">
                 <button class="action-button" onclick="location.href='genre_index.html'">다시 해보기</button>
-                <a href="main_landing_page.html" class="home-button">메인 페이지로 돌아가기</a>
+                <a href="index.html" class="home-button">메인 페이지로 돌아가기</a>
             </div>
         </div>
     </main>
