--- a/frontend/recommend_index.html
+++ b/frontend/recommend_index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <header>
-        <a href="main_landing_page.html" class="logo-link">
+        <a href="index.html" class="logo-link">
             <img src="static/logo.png" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
         </a>
     </header>
@@ -56,7 +56,7 @@
         </div>
 
         <div class="navigation-buttons">
-            <a href="main_landing_page.html" class="nav-button">메인 페이지로 돌아가기</a>
+            <a href="index.html" class="nav-button">메인 페이지로 돌아가기</a>
         </div>
     </main>
 
